change default vehicle color to unknown

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -182,7 +182,7 @@
 						<option value="Navy">Navy</option>
 						<option value="Pearl">Pearl</option>
 						<option value="Tan">Tan</option>
-						<option value="Unknown">Unknown</option>
+						<option value="Unknown" selected>Unknown</option>
 						<option value="Yellow">Yellow</option>
 						<option value="Blue">Blue</option>
 						<option value="Gray">Gray</option>
