add success message

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -27,7 +27,7 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
-		<div class="mx-auto min-h-screen px-4 max-w-5xl">
+		<div class="mx-auto min-h-screen px-4 min-w-lg max-w-5xl">
 			<div class="text-center mt-6 mb-2">
 				form to automate
 				<a
@@ -220,6 +220,10 @@
 					href="https://www.benwowo.com"
 					>ben wowo</a
 				>.
+			</div>
+			<div id="successMessage" class="invisible text-center">
+				<span class="text-green-400">success!</span> check your email to confirm
+				that the permit was created.
 			</div>
 		</div>
 	</body>
