add remember me

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -198,6 +198,18 @@
 						<option value="Yellow/Gold">Yellow/Gold</option>
 					</select>
 				</div>
+				<div class="col-span-2 hover:bg-gray-200 px-2 py-1">
+					<label for="remember-me" class="flex items-center cursor-pointer">
+						<input
+							class="mr-2"
+							type="checkbox"
+							id="remember-me"
+							name="remember-me"
+							checked
+						/>
+						<span>Remember my info</span>
+					</label>
+				</div>
 				<button
 					class="w-full border px-4 py-2 bg-gray-200 hover:bg-green-200 focus:outline-none focus:bg-green-200"
 					type="submit"
@@ -214,10 +226,13 @@
 				</button>
 			</form>
 			<div class="text-center mt-4 mb-2">
-				made by
 				<a
-					class="underline hover:underline hover:cursor-pointer"
-					href="https://www.benwowo.com"
+					class="underline hover:cursor-pointer"
+					href="https://github.com/BenWowo/moda-automation"
+					>source</a
+				>
+				made by
+				<a class="underline hover:cursor-pointer" href="https://www.benwowo.com"
 					>ben wowo</a
 				>.
 			</div>
