--- a/web/src/video/vid.html
+++ b/web/src/video/vid.html
@@ -4,23 +4,29 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Video</title>
-		<link href="../css/output.css" rel="stylesheet" />
-		<script src="video.js"></script>
+		<script src="cookieStore.js"></script>
+		<script src="vid.js"></script>
 	</head>
 	<body>
 		<div class="mx-auto min-h-screen px-4 max-w-5xl">
 			<div class="py-8">
+				<div class="border-2 p-4">
+					<iframe
+						src="https://www.vidking.net/embed/movie/24?autoPlay=true"
+						width="100%"
+						height="600"
+						frameborder="0"
+						allowfullscreen
+					>
+					</iframe>
+				</div>
 				<div class="flex justify-between items-center mb-4">
-					<h1 class="text-2xl font-bold">Video Content</h1>
 					<button
 						id="logout-btn"
 						class="border px-4 py-2 bg-gray-200 hover:bg-red-200 focus:outline-none"
 					>
 						Logout
 					</button>
-				</div>
-				<div class="border-2 p-4">
-					<iframe src="https://www.vidking.net/embed/movie/24?autoPlay=true" width="100%" height="600" frameborder="0" allowfullscreen> </iframe>
 				</div>
 			</div>
 		</div>
