--- a/web/src/video/login.html
+++ b/web/src/video/login.html
@@ -10,44 +10,48 @@
 	</head>
 	<body>
 		<div
-			class="mx-auto min-h-screen px-4 min-w-lg max-w-5xl flex flex-col items-center justify-center"
+			class="mx-auto min-h-screen px-4 min-w-md max-w-5xl flex flex-col items-center justify-center"
 		>
-			<div class="text-center mb-2">sign in form.</div>
-			<form class="flex flex-col border-2 p-4 gap-4">
-				<h2 class="font-bold">info</h2>
-				<div class="flex flex-col">
-					<label for="password">password</label>
-					<input
-						class="border px-2 py-1 focus:outline-none"
-						type="text"
-						id="password"
-						name="password"
-						autocomplete="off"
-						value=""
-						required
-					/>
+			<div>
+				<div class="text-center mb-2">sign in form.</div>
+				<form class="flex flex-col border-2 p-4 gap-4">
+					<h2 class="font-bold">info</h2>
+					<div class="flex flex-col">
+						<label for="password">password</label>
+						<input
+							class="border px-2 py-1 focus:outline-none"
+							type="text"
+							id="password"
+							name="password"
+							autocomplete="off"
+							value=""
+							required
+						/>
+					</div>
+					<button
+						class="w-full border px-4 py-2 bg-gray-200 hover:bg-green-200 focus:outline-none focus:bg-green-200"
+						type="submit"
+						id="submit"
+					>
+						sign in
+					</button>
+				</form>
+				<div class="text-center mt-4 mb-2">
+					<a
+						class="underline hover:cursor-pointer"
+						href="https://github.com/BenWowo/moda-automation"
+						>source</a
+					>
+					made by
+					<a
+						class="underline hover:cursor-pointer"
+						href="https://www.benwowo.com"
+						>ben wowo</a
+					>.
 				</div>
-				<button
-					class="w-full border px-4 py-2 bg-gray-200 hover:bg-green-200 focus:outline-none focus:bg-green-200"
-					type="submit"
-					id="submit"
-				>
-					sign in
-				</button>
-			</form>
-			<div class="text-center mt-4 mb-2">
-				<a
-					class="underline hover:cursor-pointer"
-					href="https://github.com/BenWowo/moda-automation"
-					>source</a
-				>
-				made by
-				<a class="underline hover:cursor-pointer" href="https://www.benwowo.com"
-					>ben wowo</a
-				>.
-			</div>
-			<div id="wrong password message" class="invisible text-center">
-				<span class="text-red-400">wrong password</span> try again lol 😹
+				<div id="wrong password message" class="invisible text-center">
+					<span class="text-red-400">wrong password</span> try again lol 😹
+				</div>
 			</div>
 		</div>
 	</body>
