--- a/web/src/index.html
+++ b/web/src/index.html
@@ -198,7 +198,7 @@
 						<option value="Yellow/Gold">Yellow/Gold</option>
 					</select>
 				</div>
-				<div class="col-span-2 hover:bg-gray-200 px-2 py-1">
+				<div class="col-span-2 hover:bg-gray-200 px-2 py-1 accent-black">
 					<label for="remember-me" class="flex items-center cursor-pointer">
 						<input
 							class="mr-2"
