--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-TPWKR05CEN"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-TPWKR05CEN");
+		</script>
+		<script src="script.js"></script>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Moda automation form</title>
@@ -24,7 +39,6 @@
 		<link rel="icon" type="image/png" href="assets/favicon.ico" />
 		<link rel="manifest" href="assets/site.webmanifest" />
 		<link href="./css/output.css" rel="stylesheet" />
-		<script src="script.js"></script>
 	</head>
 	<body>
 		<div class="mx-auto min-h-screen px-4 min-w-lg max-w-5xl">
