--- a/web/src/index.html
+++ b/web/src/index.html
@@ -73,7 +73,7 @@
 						id="password"
 						name="password"
 						autocomplete="off"
-						value="modrvp"
+						value="0979"
 						required
 					/>
 				</div>
